# mirtoolkit

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  noxfile.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
docs/source/: conf.py  index.md  installation.md
mirtoolkit/: __init__.py  beat_this.py  bytedance_piano_transcription.py  utils.py
scripts/: prepare_changelog.py  release.sh
src/mirtoolkit/: __init__.py  beat_this.py  beat_transformer.py  bytedance_piano_transcription.py  config.py  demucs.py  sheetsage.py  spleeter.py  utils.py  ytdb.py
tests/: run_full_test.sh  test_beat_this.py  test_beat_transformer.py  test_bytedance_piano_transcription.py  test_demucs.py  test_sheetsage.py  test_spleeter.py  test_ytdb.py
